--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
  <!--
-Oh Ivan, We need to make sure that NO ONE knows about emailing " id=-1' or 68 = '66; DROP ALL TABLES; -- " We will lose all our datas. I hope that Miller dude stops yapping his mouth, we should stick to hiring slavs
+Please note team, we meet up at GIGA Cafe in Auckland every Tuesday so make sure the cops don't see this, our github is https://github.com/EvilHackTeam so keep that hush 2
 -->
 
 
