--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
  <!--
-Please note team, we meet up at GIGA Cafe in Auckland every Tuesday so make sure the cops don't see this, our github is https://github.com/EvilHackTeam so keep that hush 2
+Please note team, we meet up at the Coffee Club in Auckland every Tuesday so make sure the cops don't see this, our github is https://github.com/EvilHackTeam so keep that hush 2
 -->
 
 
