How to win the challenge

--- a/index.html
+++ b/index.html
@@ -32,3 +32,4 @@ Please note team, we meet up at the Coffee Club in Auckland every Tuesday so mak
         
 </body>
 </html>
+<!-- email Francis Miller's evilhackteam mail (his hacker name@evilhackteam.ml) to win the game and get your prize --!>
